Compositing layer that renders two positioned elements should not hit test https://bugs.webkit.org/show_bug.cgi?id=195371 <rdar://problem/48649586>

Reviewed by Simon Fraser.

Followup to fix the test case (fast/scrolling/ios/overflow-scroll-overlap-2.html)

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::setEventRegion):

Revert a last minute change (that was done to fix a Mac displaylist test).

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintIntoLayer):

Compute the region on iOS only for now (it is not used on other platforms).



Canonical link: https://commits.webkit.org/209957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242830 268f45cc-cd09-0410-ab3c-d52691b4dbfc